scraping fixes and news detail

--- a/templates/detail.phtml
+++ b/templates/detail.phtml
@@ -1,1 +1,6 @@
-Detail
+<article>
+    <h1 class="title"><?php echo $item['title']; ?></h1>
+    <div class="content">
+        <?php echo $item['content']; ?>
+    </div>
+</article>
