--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,9 +3,38 @@ body {
     padding: 0;
     width: 100%;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+
 }
 
-#news {
+
+h1 {
+    font-size: 40px;
+}
+
+a {
+    color: #444;
+}
+
+p {
+    line-height: 1.61em;
+    font-weight: 300;
+    font-size: 1.2em;
+}
+
+
+article {
+    width: 840px;
+    margin: 0 auto;
+}
+
+article .content img {
+    max-width: 100%;
+    margin: 10px;
+}
+
+
+section {
     width: 1000px;
     margin: 0 auto;
 }
@@ -25,6 +54,7 @@ body {
     height: 150px;
     overflow: hidden;
     border-radius: 5px;
+    box-shadow: 0 10px 25px 0 rgba(0,0,0,.3);
 }
 
 .item-image img {
@@ -40,7 +70,11 @@ body {
     text-decoration: none;
 }
 
-.item:hover .item-title a {
+.item-title a:hover {
     text-decoration: none;
     border-bottom: 2px solid #444;
+}
+
+.item-footer {
+    color: #9a9a9a;
 }
