--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>Slim 3</title>
+        <title>Scraping</title>
         <link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
         <link href='/css/style.css' rel='stylesheet' type='text/css'>
 
